# semblend

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py
benchmarks/experiments/: kv_blending_experiment.py  kv_transfer_feasibility.py  semantic_kv_projection.py
benchmarks/experiments/_research/: __init__.py  kv_blending_experiment.py  kv_transfer_feasibility.py  semantic_kv_projection.py
benchmarks/results/v0.2.0/: RESULTS.md  fuzzy_comprehensive_a100.json  fuzzy_comprehensive_a100_final.json  semblend-quality-20260322-060654.json  semblend-quality-20260322-175516.json  summary_a100_patched_final_n500_20260322_104807.json  summary_table_10_sglang_semblend_20260321_161439.json  summary_table_10_sglang_vanilla_20260321_161437.json  summary_table_10_vllm_semblend_20260321_161513.json  summary_table_12_sglang_semblend_20260321_154446.json  summary_table_12_sglang_semblend_v020_20260321_231738.json  summary_table_12_sglang_vanilla_20260321_154444.json  summary_table_12_vllm_20260321_161043.json  summary_table_12_vllm_v020_20260321_212047.json  summary_table_12_vllm_v020_final_20260322_001043.json  table_11_wildchat.json  table_5_cross_instruction_8k.json  table_6_cross_instr_a100_8k.json  table_6_cross_instruction_8k_v020.json  tiered_20260321_210803.json  tiered_20260321_212621.json  tiered_20260321_221332.json  tiered_20260321_221507.json  tiered_20260321_223505.json
benchmarks/results/v0.3.0/: cnn_cross_instruction_8k.json  config_c_scenario1_8k.json  config_c_scenario2_fuzzy.json  config_c_scenario3_cross_doc.json  enterprise_ab_throughput.json  fuzzy_final_cpuoffload.json  fuzzy_improved_context_gate.json  fuzzy_quality.json  fuzzy_recovery.json  (+32 more)
benchmarks/suite/: __init__.py  __main__.py  chunk_index_scaling_bench.py  compare.py  fuzzy_tables.py  metadata.py  multi_donor_rag_bench.py  multi_turn_bench.py  paper_results.py  paper_tables.py  reproduce.py  semshare_scenarios.py  verify.py
deploy/dynamo/: model-cache-pvc.yaml  semblend-proxy-pod.yaml  semblend_frontend_patch.py  semblend_proxy.py  trtllm-kv-router.yaml
deploy/trtllm/: build_engine.sh  docker-compose.trtllm.yaml
docs/: sglang_semantic_provider_design.md  spec-tk-megakernel.md
dynamo-semblend/: Cargo.toml  dynamo-platform-1.0.0.tgz
dynamo-semblend/src/: config.rs  donor_store.rs  embed_client.rs  lib.rs  protocols.rs  semantic_indexer.rs
semblend/: __init__.py
semblend/core/: __init__.py
semblend/integration/: __init__.py
semblend_core/: __init__.py  alignment.py  backend.py  bathtub.py  chunk_index.py  donor_store.py  embedder.py  kv_tensor_store.py  metrics.py  multi_donor_alignment.py  multi_donor_types.py  partial_attention.py  pipeline.py  pq_segment_store.py  pyproject.toml  rope_correction.py  segment_embeddings.py  segmentation.py  simhash.py  token_index.py  triton_kernels.py
semblend_core/semshare/: __init__.py  attention_recovery.py  config.py  embedding_capture.py  hd_detector.py  kv_rearrange.py  layer_schedule.py  lsh_index.py  selective_attention.py  token_matcher.py
synapse_kv_connector/: __init__.py  alignment.py  attention_patch.py  bathtub.py  cagra_donor_store.py  client.py  connector.py  connector_protocol.py  donor_store.py  embedder.py  model_runner_hook.py  partial_attention.py  pipeline.py  rope_correction.py  segment_client.py  semblend_connector.py  simhash.py  triton_kernels.py
synapse_kv_connector/backends/: __init__.py  cpu.py  sglang_cpu.py
synapse_kv_connector/tests/: test_alignment.py  test_attention_patch.py  test_client.py  test_connector.py  test_donor_store.py  test_kv_tensor_store.py  test_partial_attention.py  test_pipeline_e2e.py  test_rope_correction.py  test_segment_client.py  test_segmentation.py  test_triton_kernels.py
tests/: test_cpu_connector.py  test_sglang_cpu.py
tests/core/: test_bathtub_fuzzy.py  test_chunk_fast_path.py  test_chunk_index.py  test_confidence_scoring.py  test_fuzzy_alignment.py  test_multi_donor_alignment.py  test_multi_donor_types.py  test_package_imports.py  test_pq_segment_store.py  test_semshare_ar.py  test_semshare_capture.py  test_semshare_lsh.py  test_semshare_pipeline.py  test_semshare_rearrange.py  test_semshare_schedule.py  test_semshare_selective.py
(+79 files in other folders)
