[package]
name = "dynamo-semblend"
version = "0.1.0"
edition = "2024"
description = "SemBlend semantic KV cache lookup for NVIDIA Dynamo KVBM — extends RadixTree prefix matching with embedding-based semantic search"
license = "Apache-2.0"
repository = "https://github.com/worldflowai/semblend"

[dependencies]
# Dynamo KV Router (the crate we're extending)
# In an upstream PR this would be a path dependency; for now we vendor the traits
# dynamo-kv-router = { path = "../dynamo/lib/kv-router" }

# Async
tokio = { version = "1", features = ["sync", "time"] }
async-trait = "0.1"

# Hashing (must match Dynamo's XXH3 implementation)
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rustc-hash = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for embed sidecar
reqwest = { version = "0.12", features = ["json"] }

# Concurrency
parking_lot = "0.12"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
